@@ -246,8 +246,8 @@ COMMON_DOCS="doc/*.txt doc/*.asc doc/javadocs"
 COMMON_PACKAGE="3rd_party catman ckpt dtrace examples/jobs \
                 examples/drmaa include inst_sge install_qmaster \
                 install_execd start_gui_installer \
-		        man mpi pvm qmon util lib/drmaa.jar lib/juti.jar lib/jgdi.jar"
-ARCO_PACKAGE="dbwriter reporting"
+		        man mpi pvm qmon util lib/JSV.jar lib/drmaa.jar lib/juti.jar lib/jgdi.jar"
+ARCO_PACKAGE="dbwriter"
 
 if [ "$VERSION" = "" -o "$VDIR" = "" ]; then
    ErrUsage
